control-service: enable usage of aws temporary credentials
Signed-off-by: mrMoZ1 <mzhivkov@vmware.com>